[metadata]
name = "PytubeDownloader"
version = 1.0.0
author = Elsio Lisboa de Almeida
author_email = lisboavaga25@gmail.com
description = This is a small package that download any youtube videos very easy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/albioncracker/pytubedownloader.git
project_urls =
    Bug Tracker = https://github.com/albioncracker/pytubedownloader.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9




[options.packages.find]
where = src